--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# my config file
+./config.ini
+./.qiniu_pythonsdk_hostscache.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -99,3 +103,5 @@ ENV/
 
 # mypy
 .mypy_cache/
+config.ini
+.qiniu_pythonsdk_hostscache.json
