加入错误显示界面并增加requirements.txt文件
image会被ClipBoard检测到两次的bug仍未解决。

--- a/template_config.ini
+++ b/template_config.ini
@@ -1,8 +1,8 @@
 [QINIU]
 outside_catenary = olrv1mriz.bkt.clouddn.com
-access_key = ""
-secret_key = asd
-bucket_name = asd
+access_key = 
+secret_key = k9dV-dD9kVNwxJ5a834y1Ex2IZCRMgUVxHspMjMv
+bucket_name = wuxiaobai24tuchuang
 markdown = True
 auto_copy = True
 auto_upload = True
